fix: admin can tile and detect
